tests/cases/errors/parser/stmt_decorator1.vnm
fn add_one(func) {
    fn inner(x) {
        return func(x) + 1;
    }
    return inner;
}

@add_one
struct spam(x) {
    return "hello";
}

print spam(1);
